--- a/instagram-ng14/src/app/components/posts/create-post/create-post.component.html
+++ b/instagram-ng14/src/app/components/posts/create-post/create-post.component.html
@@ -28,7 +28,7 @@
           </div>
         </form>
 
-        <a class="text-sm text-blue-600" routerLink="/profile/{{userId}}">Back to home !</a>
+        <a class="text-sm text-blue-600" routerLink="/profile">Back to home !</a>
         
       </div>
 </div>
