--- a/instagram-ng14/src/app/components/comman/feeds/feeds.component.html
+++ b/instagram-ng14/src/app/components/comman/feeds/feeds.component.html
@@ -14,6 +14,7 @@
             <img class="h-80" src="{{ imageUrl }}/{{ image.imagePath }}" />
           </div>
         </div>
+        
       </div>
       <div class="flex items-center justify-between mx-4 mt-3 mb-2">
         <div class="flex gap-5">
@@ -61,8 +62,8 @@
       </div>
       
       <!-- show comment -->
-      <div *ngFor="let cmt of feed.cmtPosts" class="px-4 flex justify-between">
-        <div class="w-full">
+      <div *ngFor="let cmt of feed.cmtPosts; let i=index" class="px-4 flex justify-between">
+        <div *ngIf="i<2" class="w-full">
           <span class="font-semibold mr-1 text-sm">{{
             cmt.byUser.username
           }}</span>
