--- a/instagram-ng14/src/app/components/feedlist/feedlist.component.html
+++ b/instagram-ng14/src/app/components/feedlist/feedlist.component.html
@@ -41,3 +41,32 @@
     </div>
   </div>
 </div>
+
+<div class="searchmodel hidden">
+  <div class="h-screen w-full fixed left-0 top-0 pt-28 flex justify-center items-start bg-black bg-opacity-20">
+    <div class="bg-white rounded shadow-lg md:w-1/3 w-64">
+      <div class="border-b px-4 py-2">
+        <h3>Search Results</h3>
+      </div>
+
+      <div class="p-3">
+        <div *ngFor="let user of searchUsers" class="mx-2 flex flex-row items-center align-items justify-between pt-3">
+          <div class="flex items-center justify-between">
+            <img class="rounded-full w-8 flex mr-3" src="../../../assets/Logo-facebook.png" />
+            <a>
+              <p class="font-bold text-sm"> {{user.username}}</p>
+
+            </a>
+          </div>
+          <button class="text-xs font-bold text-blue-700"> follow </button>
+         
+        </div>
+      </div>
+
+      <div class="flex justify-end items-center w-100 border-t p-3">
+        <button (click)="closemodel()" class="bg-red-600 hover:bg-red-800 px-3 py-1 rounded text-white mr-1">cancel</button>
+      </div>
+
+    </div>
+
+</div>
