--- a/instagram-ng14/src/app/components/profile/profile.component.html
+++ b/instagram-ng14/src/app/components/profile/profile.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
-<div class="">
-  <div class="pt-16 md:px-72">
-    <div class="flex justify-center space-x-32">
-      <div class="rounded-full border-b border-gray-500 p-1 h-36 flex items-center">
-        <img  class="rounded-full border border-gray-100 shadow-sm"
+<div class="overflow-y-scroll" *ngIf="userProfile">
+  <div class=" pt-8 md:pt-16 md:px-72">
+    <div class="flex justify-center space-x-4 md:space-x-24">
+      <div class="rounded-full p-1 h-36 flex items-center">
+        <img class="rounded-full border border-gray-300 p-1 shadow-sm"
           src="https://randomuser.me/api/portraits/women/81.jpg" alt="user image" />
       </div>
       <div>
@@ -12,8 +12,8 @@
             <span class="font semibold text-lg">
               {{userProfile.user.username}}
             </span>
-            <a class="border border-gray-400 rounded py-1 px-2" routerLink="/edit-profile/{{userId}}">
-              Edit profile
+            <a class="border border-gray-400 text-xs rounded py-1 px-2" routerLink="/edit-profile/{{userId}}">
+              Edit
             </a>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="w-6 h-6">
@@ -24,10 +24,10 @@
 
           </div>
         </div>
-        <div class="pt-3 flex space-x-10">
-          <span class="text-sm font-semibold">11 posts</span>
-          <span class="text-sm font-semibold">{{userProfile.no_of_followers}} followers</span>
-          <span class="text-sm font-semibold">{{userProfile.no_of_following}} following</span>
+        <div class="pt-3 flex space-x-3 md:space-x-10">
+          <span class="text-sm font-semibold">{{userPost?.length}} posts</span>
+          <span (click)="show('followers')" class="showFollower text-sm font-semibold">{{userProfile.no_of_followers}} followers</span>
+          <span (click)="show('following')" class="text-sm font-semibold">{{userProfile.no_of_following}} following</span>
         </div>
         <div class="pt-6 grid">
           <span class="text-lg font-semibold"> {{userProfile.user.firstName}} {{userProfile.user.lastName}} </span>
@@ -47,10 +47,9 @@
         <span class="font semibold text-xs  border-b-black">POSTS</span>
         <span class="font semibold text-xs">SAVED</span>
         <span class="font semibold text-xs">TEGS</span>
-
       </div>
     </div>
-    <div class="pt-6 flex flex-wrap col-3 space-x-4 space-y-4 justify-center items-center">
+    <div class="pt-6 flex flex-wrap col-03 space-x-4 space-y-4 justify-center items-center">
 
       <!-- <div class="h-48 w-60" *ngFor="let post of userPost">
         <div class="flex">
@@ -61,19 +60,20 @@
       </div> -->
 
 
-      <div class="h-48 w-60" *ngFor="let post of userPost">
-        <div class="flex relative">
-          <img class="h-48" src="{{imageUrl}}/{{post.postImages[0].imagePath}}">
-          
-          <div *ngIf="post.postImages.length > 1" class="bg-white flex justify-center items-center text-black text-xs uppercase font-bold rounded-full p-2 absolute top-0 right-1 ml-2 mt-2">
-            <svg class="w-5 inline-block" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-              stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+      <div class="h-24 w-24 md:h-48 md:w-60" *ngFor="let post of userPost">
+        <div class="relative">
+          <img class="h-24 md:h-48" src="{{imageUrl}}/{{post.postImages[0].imagePath}}">
+
+          <div *ngIf="post.postImages.length > 1"
+            class="bg-white flex justify-center items-center text-black text-xs uppercase font-bold rounded-full p-1 md:p-2 absolute top-0 right-1 ml-2 mt-2">
+            <svg class="inline-block" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+              stroke-width="1.5" stroke="currentColor" class="w-3 md:w-5 md:h-5">
               <path stroke-linecap="round" stroke-linejoin="round"
                 d="M15.75 17.25v3.375c0 .621-.504 1.125-1.125 1.125h-9.75a1.125 1.125 0 01-1.125-1.125V7.875c0-.621.504-1.125 1.125-1.125H6.75a9.06 9.06 0 011.5.124m7.5 10.376h3.375c.621 0 1.125-.504 1.125-1.125V11.25c0-4.46-3.243-8.161-7.5-8.876a9.06 9.06 0 00-1.5-.124H9.375c-.621 0-1.125.504-1.125 1.125v3.5m7.5 10.375H9.375a1.125 1.125 0 01-1.125-1.125v-9.25m12 6.625v-1.875a3.375 3.375 0 00-3.375-3.375h-1.5a1.125 1.125 0 01-1.125-1.125v-1.5a3.375 3.375 0 00-3.375-3.375H9.75" />
             </svg>
             <span>3</span>
           </div>
-        
+
         </div>
 
       </div>
@@ -81,4 +81,38 @@
     </div>
 
   </div>
+</div>
+
+
+<div class="model bg-gray-400 hidden">
+  <div class="h-screen w-full fixed left-0 top-0 pt-10 flex justify-center items-start bg-black bg-opacity-50">
+    <div class="bg-white rounded shadow-lg md:w-1/3 w-64">
+      <div class="border-b px-4 py-2">
+        <h3>{{title}}</h3>
+      </div>
+
+      <div class="p-3">
+        <div *ngFor="let item of data" class="mx-2 flex flex-row items-center align-items justify-between pt-3">
+          <div class="flex items-center justify-between">
+            <img class="rounded-full w-8 flex mr-3" src="../../../assets/Logo-facebook.png" />
+            <a>
+              <p *ngIf="title=='followers'" class="font-bold text-sm"> {{item.asfollower.username}}</p>
+              <p *ngIf="title=='following'" class="font-bold text-sm"> {{item.asuser.username}} </p>
+
+            </a>
+          </div>
+          <button *ngIf="item.isFollowing==false" class="text-xs font-bold text-blue-700"> follow </button>
+          <button *ngIf="item.isFollowing==true" class="text-xs font-bold text-blue-700"> unfollow </button>
+
+          <button *ngIf="title=='following'" class="text-xs font-bold text-blue-700"> unfollow </button>
+          
+        </div>
+      </div>
+
+      <div class="flex justify-end items-center w-100 border-t p-3">
+        <button (click)="closemodel()" class="bg-red-600 hover:bg-red-800 px-3 py-1 rounded text-white mr-1">cancel</button>
+      </div>
+
+    </div>
+
 </div>
