--- a/instagram-ng14/src/app/components/profile/profile.component.html
+++ b/instagram-ng14/src/app/components/profile/profile.component.html
@@ -12,7 +12,7 @@
             <span class="font semibold text-lg">
               {{userProfile.user.username}}
             </span>
-            <a class="border border-gray-400 text-xs rounded py-1 px-2" routerLink="/edit-profile/{{userId}}">
+            <a class="border border-gray-400 text-xs rounded py-1 px-2" routerLink="/edit-profile">
               Edit
             </a>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
