--- a/instagram-ng14/src/app/components/comman/feeds/feeds.component.html
+++ b/instagram-ng14/src/app/components/comman/feeds/feeds.component.html
@@ -1,100 +1,164 @@
 <div *ngFor="let feed of feeds" class="bg-gray-100 p-4">
-    <div class="bg-white border rounded-sm">
-      <div class="flex items-center px-4 py-3">
-        <img class="h-8 w-8 rounded-full" src="../../../assets/Logo-facebook.png" />
-        <div class="ml-3">
-          <span class="text-sm font-semibold antialiased block leading-tight">{{ feed.user.username }}</span>
-          <span class="text-gray-600 text-xs block">{{ feed.user.firstName }} {{ feed.user.lastName }}</span>
-        </div>
+  <div class="bg-white border rounded-sm">
+    <div class="flex items-center px-4 py-3">
+      <img
+        class="h-8 w-8 rounded-full"
+        src="../../../assets/Logo-facebook.png"
+      />
+      <div class="ml-3">
+        <span class="text-sm font-semibold antialiased block leading-tight">{{
+          feed.user.username
+        }}</span>
+        <span class="text-gray-600 text-xs block"
+          >{{ feed.user.firstName }} {{ feed.user.lastName }}</span
+        >
       </div>
-      <div class="flex justify-center items-center">
-        <!-- <img src="{{imageUrl}}/{{feed.postImages[0].imagePath}}" /> -->
-        <div class="flex">
-          <div class="m-2" *ngFor="let image of feed.postImages">
-            <img class="h-80" src="{{ imageUrl }}/{{ image.imagePath }}" />
-          </div>
-        </div>
-        
-      </div>
-      <div class="flex items-center justify-between mx-4 mt-3 mb-2">
-        <div class="flex gap-5">
-          <!-- <svg *ngIf="!likedToggle" (click)="likedPost(feed.id)" id="post{{feed.id}}" fill="#262626" height="24" viewBox="0 0 48 48" width="24">
-            <path
-              d="M34.6 6.1c5.7 0 10.4 5.2 10.4 11.5 0 6.8-5.9 11-11.5 16S25 41.3 24 41.9c-1.1-.7-4.7-4-9.5-8.3-5.7-5-11.5-9.2-11.5-16C3 11.3 7.7 6.1 13.4 6.1c4.2 0 6.5 2 8.1 4.3 1.9 2.6 2.2 3.9 2.5 3.9.3 0 .6-1.3 2.5-3.9 1.6-2.3 3.9-4.3 8.1-4.3m0-3c-4.5 0-7.9 1.8-10.6 5.6-2.7-3.7-6.1-5.5-10.6-5.5C6 3.1 0 9.6 0 17.6c0 7.3 5.4 12 10.6 16.5.6.5 1.3 1.1 1.9 1.7l2.3 2c4.4 3.9 6.6 5.9 7.6 6.5.5.3 1.1.5 1.6.5.6 0 1.1-.2 1.6-.5 1-.6 2.8-2.2 7.8-6.8l2-1.8c.7-.6 1.3-1.2 2-1.7C42.7 29.6 48 25 48 17.6c0-8-6-14.5-13.4-14.5z">
-            </path>
-          </svg> -->
-
-          <svg (click)="likedPost($event)" id="feed-{{feed.id}}"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
-            fill="gray" class="w-7 h-7">
-            <path
-              d="M11.645 20.91l-.007-.003-.022-.012a15.247 15.247 0 01-.383-.218 25.18 25.18 0 01-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0112 5.052 5.5 5.5 0 0116.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 01-4.244 3.17 15.247 15.247 0 01-.383.219l-.022.012-.007.004-.003.001a.752.752 0 01-.704 0l-.003-.001z" />
-          </svg>
-
-          <svg (click)="addComment(feed.id)" fill="#262626" height="24" viewBox="0 0 48 48" width="24">
-            <path clip-rule="evenodd"
-              d="M47.5 46.1l-2.8-11c1.8-3.3 2.8-7.1 2.8-11.1C47.5 11 37 .5 24 .5S.5 11 .5 24 11 47.5 24 47.5c4 0 7.8-1 11.1-2.8l11 2.8c.8.2 1.6-.6 1.4-1.4zm-3-22.1c0 4-1 7-2.6 10-.2.4-.3.9-.2 1.4l2.1 8.4-8.3-2.1c-.5-.1-1-.1-1.4.2-1.8 1-5.2 2.6-10 2.6-11.4 0-20.6-9.2-20.6-20.5S12.7 3.5 24 3.5 44.5 12.7 44.5 24z"
-              fill-rule="evenodd"></path>
-          </svg>
-          <svg fill="#262626" height="24" viewBox="0 0 48 48" width="24">
-            <path
-              d="M47.8 3.8c-.3-.5-.8-.8-1.3-.8h-45C.9 3.1.3 3.5.1 4S0 5.2.4 5.7l15.9 15.6 5.5 22.6c.1.6.6 1 1.2 1.1h.2c.5 0 1-.3 1.3-.7l23.2-39c.4-.4.4-1 .1-1.5zM5.2 6.1h35.5L18 18.7 5.2 6.1zm18.7 33.6l-4.4-18.4L42.4 8.6 23.9 39.7z">
-            </path>
-          </svg>
-        </div>
-        <div class="flex">
-          <svg fill="#262626" height="24" viewBox="0 0 48 48" width="24">
-            <path
-              d="M43.5 48c-.4 0-.8-.2-1.1-.4L24 29 5.6 47.6c-.4.4-1.1.6-1.6.3-.6-.2-1-.8-1-1.4v-45C3 .7 3.7 0 4.5 0h39c.8 0 1.5.7 1.5 1.5v45c0 .6-.4 1.2-.9 1.4-.2.1-.4.1-.6.1zM24 26c.8 0 1.6.3 2.2.9l15.8 16V3H6v39.9l15.8-16c.6-.6 1.4-.9 2.2-.9z">
-            </path>
-          </svg>
-        </div>
-      </div>
-      <div class="font-semibold text-sm mx-4 mt-2 mb-4">
-        {{ feed.user.username }}
-        <span class="text-sm font-normal">{{ feed.content }}</span>
-      </div>
-
-      <div class="font-semibold text-sm mx-4 mt-1">
-        {{ feed.likedPosts.length }} likes
-      </div>
-      <div *ngIf="feed.cmtPosts.length > 0" class="px-4 my-1 text-gray-400 text-xs">
-        VIEW ALL COMMENTS
-      </div>
-      
-      <!-- show comment -->
-      <div *ngFor="let cmt of feed.cmtPosts; let i=index" class="px-4 flex justify-between">
-        <div *ngIf="i<2" class="w-full">
-          <span class="font-semibold mr-1 text-sm">{{
-            cmt.byUser.username
-          }}</span>
-          <span class="text-sm font-normal">{{ cmt.comment }}</span>
-          <span (click)="openReplySection(cmt.id)"
-            class="cursor-pointer float-right text-sm font-semibold p-1">Reply</span>
-          <!-- reply box -->
-          <div id="{{ cmt.id }}" hidden>
-            <form class="flex font-semibold text-sm mx-2 mt-2 mb-4">
-              <div class="flex items-center px-4 py-3">
-                <img class="h-8 w-8 rounded-full" src="../../../assets/Logo-facebook.png" />
-                <div class="ml-3">
-                  <span *ngIf="user"
-                    class="text-sm font-semibold antialiased block leading-tight">{{ user.username }}</span>
-                </div>
-              </div>
-              <input type="text" class="w-full mx-6 my-4" placeholder="reply to {{ cmt.byUser.username }}"
-                name="comment" />
-              <button type="submit" class="mr-6 border bg-gray-200 rounded p-2 my-4">
-                ADD
-              </button>
-            </form>
-          </div>
-
-          <!-- end reply box -->
-        </div>
-      </div>
-      <!-- end-show-comment -->
-
-      <div class="px-4 mt-2 text-gray-400 text-xs mb-4">2 DAYS AGO</div>
-      <hr />
-
     </div>
+    <div class="flex justify-center items-center">
+      <!-- <img src="{{imageUrl}}/{{feed.postImages[0].imagePath}}" /> -->
+      <div class="flex">
+        <div class="m-2" *ngFor="let image of feed.postImages">
+          <img class="h-80" src="{{ imageUrl }}/{{ image.imagePath }}" />
+        </div>
+      </div>
+    </div>
+    <div class="flex items-center justify-between mx-4 mt-3 mb-2">
+      <div class="flex gap-5">
+        <svg
+          *ngIf="feed.isAlreadyLiked"
+          (click)="likedPost($event)"
+          id="feed-{{ feed.id }}"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="red"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-7 h-7"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
+          />
+        </svg>
+
+        <svg
+          *ngIf="!feed.isAlreadyLiked"
+          (click)="likedPost($event)"
+          id="feed-{{ feed.id }}"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-7 h-7"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
+          />
+        </svg>
+
+        <svg
+          (click)="addComment(feed.id)"
+          fill="#262626"
+          height="24"
+          viewBox="0 0 48 48"
+          width="24"
+        >
+          <path
+            clip-rule="evenodd"
+            d="M47.5 46.1l-2.8-11c1.8-3.3 2.8-7.1 2.8-11.1C47.5 11 37 .5 24 .5S.5 11 .5 24 11 47.5 24 47.5c4 0 7.8-1 11.1-2.8l11 2.8c.8.2 1.6-.6 1.4-1.4zm-3-22.1c0 4-1 7-2.6 10-.2.4-.3.9-.2 1.4l2.1 8.4-8.3-2.1c-.5-.1-1-.1-1.4.2-1.8 1-5.2 2.6-10 2.6-11.4 0-20.6-9.2-20.6-20.5S12.7 3.5 24 3.5 44.5 12.7 44.5 24z"
+            fill-rule="evenodd"
+          ></path>
+        </svg>
+        <svg fill="#262626" height="24" viewBox="0 0 48 48" width="24">
+          <path
+            d="M47.8 3.8c-.3-.5-.8-.8-1.3-.8h-45C.9 3.1.3 3.5.1 4S0 5.2.4 5.7l15.9 15.6 5.5 22.6c.1.6.6 1 1.2 1.1h.2c.5 0 1-.3 1.3-.7l23.2-39c.4-.4.4-1 .1-1.5zM5.2 6.1h35.5L18 18.7 5.2 6.1zm18.7 33.6l-4.4-18.4L42.4 8.6 23.9 39.7z"
+          ></path>
+        </svg>
+      </div>
+      <div class="flex">
+        <svg fill="#262626" height="24" viewBox="0 0 48 48" width="24">
+          <path
+            d="M43.5 48c-.4 0-.8-.2-1.1-.4L24 29 5.6 47.6c-.4.4-1.1.6-1.6.3-.6-.2-1-.8-1-1.4v-45C3 .7 3.7 0 4.5 0h39c.8 0 1.5.7 1.5 1.5v45c0 .6-.4 1.2-.9 1.4-.2.1-.4.1-.6.1zM24 26c.8 0 1.6.3 2.2.9l15.8 16V3H6v39.9l15.8-16c.6-.6 1.4-.9 2.2-.9z"
+          ></path>
+        </svg>
+      </div>
+    </div>
+    <div class="font-semibold text-sm mx-4 mt-2 mb-4">
+      {{ feed.user.username }}
+      <span class="text-sm font-normal">{{ feed.content }}</span>
+    </div>
+
+    <div class="font-semibold text-sm mx-4 mt-1">
+      {{ feed.likedPosts.length }} likes
+    </div>
+    <div
+      *ngIf="feed.cmtPosts.length > 0"
+      class="px-4 my-1 text-gray-400 text-xs"
+    >
+      VIEW ALL COMMENTS
+    </div>
+
+    <!-- show comment -->
+    <div
+      *ngFor="let cmt of feed.cmtPosts; let i = index"
+      class="px-4 flex justify-between"
+    >
+      <div *ngIf="i < 2" class="w-full">
+        <span class="font-semibold mr-1 text-sm">{{
+          cmt.byUser.username
+        }}</span>
+        <span class="text-sm font-normal">{{ cmt.comment }}</span>
+        <span
+          (click)="openReplySection(cmt.id)"
+          class="cursor-pointer float-right text-sm font-semibold p-1"
+          >Reply</span
+        >
+        <!-- reply box -->
+        <div id="{{ cmt.id }}" hidden>
+          <form
+            [formGroup]="cmtForm"
+            (ngSubmit)="addReply(feed.id, cmt.id)"
+            class="flex font-semibold text-sm mx-2 mt-2 mb-4"
+          >
+            <div class="flex items-center px-4 py-3">
+              <img
+                class="h-8 w-8 rounded-full"
+                src="../../../assets/Logo-facebook.png"
+              />
+              <div class="ml-3">
+                <span
+                  *ngIf="user"
+                  class="text-sm font-semibold antialiased block leading-tight"
+                  >{{ user.username }}</span
+                >
+              </div>
+            </div>
+            <input
+              type="text"
+              class="w-full mx-6 my-4"
+              placeholder="reply to {{ cmt.byUser.username }}"
+              name="comment"
+              formControlName="comment"
+            />
+            <button
+              type="submit"
+              class="mr-6 border bg-gray-200 rounded p-2 my-4"
+            >
+              ADD
+            </button>
+          </form>
+        </div>
+
+        <!-- end reply box -->
+      </div>
+    </div>
+    <!-- end-show-comment -->
+
+    <div class="px-4 mt-2 text-gray-400 text-xs mb-4">2 DAYS AGO</div>
+    <hr />
   </div>
+</div>
