--- a/instagram-ng14/src/app/components/profile/profile.component.html
+++ b/instagram-ng14/src/app/components/profile/profile.component.html
@@ -99,19 +99,19 @@
         <!-- posts tab is active -->
         <li class="md:border-t md:border-gray-700 md:-mt-px md:text-gray-700">
           <a class="inline-block p-3" href="#">
-            <i class="fas fa-th-large text-xl md:text-xs"></i>
+             
             <span class="hidden md:inline">post</span>
           </a>
         </li>
         <li>
           <a class="inline-block p-3" href="#">
-            <i class="far fa-square text-xl md:text-xs"></i>
+            
             <span class="hidden md:inline">igtv</span>
           </a>
         </li>
         <li>
           <a class="inline-block p-3" href="#">
-            <i class="fas fa-user border border-gray-500 px-1 pt-1 rounded text-xl md:text-xs"></i>
+           
             <span class="hidden md:inline">tagged</span>
           </a>
         </li>
@@ -132,15 +132,22 @@
               <!-- overlay-->
               <div class="overlay bg-gray-800 bg-opacity-25 w-full h-full absolute left-0 top-0 hidden">
                 <div class="flex justify-center items-center space-x-4 h-full">
-                  <span class="p-2">
-                    <i class="fas fa-heart"></i>
-                    412K
-                  </span>
+                  
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-1">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
+                    </svg>
+                    {{post.likedPosts.length }}
+                    
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M12 20.25c4.97 0 9-3.694 9-8.25s-4.03-8.25-9-8.25S3 7.444 3 12c0 2.104.859 4.023 2.273 5.48.432.447.74 1.04.586 1.641a4.483 4.483 0 01-.923 1.785A5.969 5.969 0 006 21c1.282 0 2.47-.402 3.445-1.087.81.22 1.668.337 2.555.337z" />
+                    </svg>
+                    
 
-                  <span class="p-2">
-                    <i class="fas fa-comment"></i>
-                    2,909
-                  </span>
+                 
+              
+                  {{post.cmtPosts.length }}
+
+                  
                 </div>
               </div>
             </article>
