--- a/instagram-ng14/src/app/components/auth/login/login.component.html
+++ b/instagram-ng14/src/app/components/auth/login/login.component.html
@@ -25,8 +25,8 @@
         <h5 class="my-3 text-xs">OR</h5>
 
         <div class="flex">
-            <img class="h-5 mr-1" src="../../../../assets/Logo-facebook.png">
-            <a class="text-blue-900">Login in with Facebook</a>
+            <img class="h-5 mr-1" src="../../../../assets/facebook.png">
+            <a class="text-blue-900 text-sm" (click)="githubLogin()">Login in with Facebook</a>
         </div>
         
     </div>
