--- a/instagram-ng14/src/app/components/comman/feeds/feeds.component.html
+++ b/instagram-ng14/src/app/components/comman/feeds/feeds.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let feed of feeds" class="bg-gray-100 p-4">
+<div *ngFor="let feed of feeds" class="bg-gray-100 md:p-4">
   <div class="bg-white border rounded-sm">
     <div class="flex items-center px-4 py-3">
       <img
