--- a/instagram-ng14/src/app/components/profile/profile.component.html
+++ b/instagram-ng14/src/app/components/profile/profile.component.html
@@ -122,7 +122,7 @@
 
         <div class="w-1/3 p-px md:px-3" *ngFor="let post of userPost">
           <!-- post 1-->
-          <a href="#">
+          <a routerLink="/view-post/{{post.id}}">
             <article class="post bg-gray-100 text-white relative pb-full md:mb-6">
               <!-- post images-->
               <img class="w-full h-full absolute left-0 top-0 object-cover"
