--- a/instagram-ng14/src/app/components/auth/signup/signup.component.html
+++ b/instagram-ng14/src/app/components/auth/signup/signup.component.html
@@ -165,7 +165,7 @@
         <h5 class="my-3 text-xs">OR</h5>
 
         <div class="flex">
-          <img class="h-5 mr-1" src="../../../../assets/Logo-facebook.png" />
+          <img class="h-5 mr-1" src="../../../../assets/facebook.png" />
           <a class="text-blue-900">Login in with Facebook</a>
         </div>
       </div>
